--- a/.editorconfig
+++ b/.editorconfig
@@ -19,11 +19,30 @@ indent_style = tab
 [.github/workflows/*.yml]
 indent_size = 2
 
+[*.go]
+indent_style = tab
+indent_size = 4
+
+[go.mod]
+indent_style = tab
+
+[*.{js,svelte,ts,tsx}]
+indent_size = 2
+
+[*.json]
+indent_size = 2
+
+[Makefile]
+indent_style = tab
+
 [*.md]
 trim_trailing_whitespace = false
 
 [*.sh]
 indent_style = tab
+
+[*.toml]
+indent_size = 2
 
 [*.{yaml,yml}]
 trim_trailing_whitespace = false
