--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,26 @@
 * text=auto eol=lf
 
+*.conf text eol=lf
+*.go text eol=lf
+*.html text eol=lf
+*.ini text eol=lf
+*.js text eol=lf
+*.json text eol=lf
 *.md text eol=lf
 *.sh text eol=lf
+*.svelte text eol=lf
+*.toml text eol=lf
 *.yaml text eol=lf
+*.yml text eol=lf
+go.mod text eol=lf
+go.sum text eol=lf merge=ours
+Dockerfile text eol=lf
+Makefile text eol=lf
 
+*.ico binary
 *.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.woff binary
+*.woff2 binary
