--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       target: frizzante_prod
+    container_name: frizzante_prod
     environment:
       APP_ENV: prod
       APP_SECRET: ${APP_SECRET}
