chore(app): making sure bun, air and nodejs dependencies are always installed and adding an alternative to start the development server directly inline.
Since we don't want to deal with Delve and Docker Debuggers, we provide a simple container that allows developers to debug their application in a container.

However, some people don't care about using debuggers, hence allowing them to immediately start the development server inline removes some unnecessary steps for them.

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,10 +2,10 @@ services:
   frizzante:
     build:
       context: .
-      target: frizzante_dev
-    container_name: frizzante-dev
+      target: frizzante_start
+    container_name: frizzante-start
     environment:
-      APP_ENV: ${APP_ENV:-dev}
+      DEV: ${DEV:-}
       DATABASE_URL: ${DATABASE_URL:-}
     extra_hosts:
       - host.docker.internal:host-gateway
