--- a/compose.yaml
+++ b/compose.yaml
@@ -13,5 +13,5 @@ services:
       - 8080:8080
     tty: true
     volumes:
-      - ./:/app
-      - /app/.gen
+      - ./:/frizzante
+      - /frizzante/.gen
